--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
           <div class="navbar-wagon">
             <!-- Logo -->
             <a href="/" class="navbar-wagon-brand">
-              <%= image_tag ("logo.png")%>
+               Dogcount
             </a>
 
             <!-- Right Navigation -->
