--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
           </div>
         </div>
       </header>
-      <div class="container">
+      <div class="container" style="font-size: 15px;">
         <%= yield %>
       </div>
   </body>
