--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,8 @@
  *= require_self
  */
 
+ @media (min-width:1025px) { .container { width: 95% !important;} }
+
  /* Main navbar */
  .navbar-wagon {
    box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
