adding extra weather

--- a/app/views/walks/new.html.haml
+++ b/app/views/walks/new.html.haml
@@ -51,6 +51,8 @@
       case 'snow': return 'Neige'
       case 'clear': return 'Temps clair'
       case 'thunderstom': return 'Orage'
+	  case 'fog': return 'Brouillard'
+	  case 'mist': return 'Brume'
     }
   }
 
