--- a/app/views/walks/new.html.haml
+++ b/app/views/walks/new.html.haml
@@ -8,8 +8,15 @@
     = f.select(:weather, options_for_select(@weathers), {}, {class: "form-control"})
     = f.label :duration, 'Durée de la promenade (min)'
     = f.number_field :duration, class: "form-control", required: true
+    %p{ :style => "font-weight: bold;" }
+      Inviter d'autre personnes
+    - User.where.not(id: @user.id).each do |user|
+      %span{ :style => "padding-left: 15px;" }
+        = check_box_tag(:user_ids, user.id, false, :name=> 'user_ids[]', id: "#{user.id}")
+        %span
+          = user.username 
     %br
-    = f.submit "Créer", class: "btn btn-primary"
+    = f.submit "Créer", class: "btn btn-primary",  :style => "margin-top: 20px;" 
 
 
 :javascript
@@ -22,8 +29,8 @@
   $( document ).ready(function(){
     if (navigator.geolocation) {
       navigator.geolocation.getCurrentPosition(function (position) {
-        var lat = "lat=" + position.coords.latitude;
-        var lon = "lon=" + position.coords.longitude;
+        lat = "lat=" + position.coords.latitude;
+        lon = "lon=" + position.coords.longitude;
         getWeather(lat, lon);
       });
     } else {
