--- a/app/views/walks/rankings.html.haml
+++ b/app/views/walks/rankings.html.haml
@@ -21,3 +21,4 @@
 - if user_signed_in?
   %div
     = link_to "Nouvelle promenade", new_walk_path, class: "btn btn-primary"
+    = link_to "Doggo dashboard", dashboard_path, class: "btn btn-primary"
