--- a/app/views/walks/rankings.html.haml
+++ b/app/views/walks/rankings.html.haml
@@ -3,17 +3,17 @@
   %table.table
     %thead
       %tr
-        %th{:colspan => "3"} Classement
+        %th{:colspan => "3"} Classement du mois 
     %tbody
       - @users.each do |user|
         %tr
           %td
             = user.username
           %td
-            = user.number_walks
+            = user.number_walks_current_month
             promenades
           %td
-            = user.duration_walks
+            = user.duration_walks_current_month
             minutes
           %td
             = link_to "", walks_path(:user_id => "#{user.id}"), class: "glyphicon glyphicon-eye-open"
