--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,6 +1,11 @@
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
 %h3 
   Doggo
   = dog_face(@last_walk_in_h)
+  \- #{@time.strftime('%d/%m/%y')}
 - if @last_walk_in_h
   - if @last_walk_in_h == 0
     %p
@@ -25,3 +30,19 @@
 - else
   %p
     Pas encore de promenade aujourd'hui !
+
+.btn.btn-primary
+  Voir les balades passées
+
+%input#datepicker{:type => 'text'}
+
+:javascript
+  $( function() {
+    $( "#datepicker" ).datepicker({
+      dateFormat: 'dd/mm/yy'
+    });
+
+    $('#datepicker').change(function() {
+      window.location.href = "/dashboard?" + jQuery.param({date: $(this).val()});
+    })
+  });
